# skill-registry

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml
app/: auth.py  config.py  main.py  models.py  storage.py
app/routers/: admin.py  identities.py  skills.py  stats.py
app/static/: style.css
app/templates/: admin.html  index.html
tests/: conftest.py  test_admin.py  test_identities.py  test_skills.py  test_stats.py  test_storage.py
